# degen_sim

./: .gitignore  README.md  pyproject.toml
notebooks/: degen_sim.ipynb
reports/: degen_sim_20251007.html  degen_sim_20251007.md  degen_sim_20251014.md  degen_sim_20251021.md  degen_sim_20251028.md  degen_sim_20251104.md  degen_sim_20251111.md  degen_sim_20251118.md  degen_sim_20251125.md  degen_sim_20251202.md  degen_sim_20251209.md  degen_sim_20251216.md
src/degen_sim/common/: constants.py  notebook_utils.py
