[project]
name = "degen-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "notebook<7",
    "jupyter_contrib_nbextensions>=0.7.0",
    "degen-sim",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
degen-sim = { workspace = true }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebooks"
]
